更改部分字段填充逻辑